let's just call ourselves the World of Kythra Team

--- a/contents/lcp_manifest.json
+++ b/contents/lcp_manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "World of Kythra LCP",
-    "author": "Multiple",
-    "description": "Custom Lancer content for the World of Kythra",
+    "author": "World of Kythra Team",
+    "description": "Custom Lancer content for the <i>World of Kythra</i> homebrew setting",
     "version": "0.1"
 }
